Remove custom classloader